# typst-anywidget

./: .gitignore  LICENSE  README.md  esbuild.mjs  example.ipynb  package-lock.json  package.json  pyproject.toml
js/: prism-typst.js  widget.css  widget.js
src/typst_anywidget/: __init__.py
